syntax = "proto3";
option java_multiple_files = true;
package ch.valtech.kubernetes.microservice.cluster.persistence.api.grpc;

message AuditingRequest {
  string filename = 1;
  enum Action {
    UPLOAD = 0;
    DOWNLOAD = 1;
    DELETE = 2;
  }
  Action action = 2;
}

message SearchRequest {
  string filename = 1;
  int32 limit = 2;
}

message MessageResponse {
  string message = 1;
}

service PersistenceService {
  rpc audit(AuditingRequest) returns (MessageResponse);
  rpc search(SearchRequest) returns (stream MessageResponse);
}